feat: remove deprecations and update error activity layout